rewrite gamepad input code

--- a/config.ini
+++ b/config.ini
@@ -31,4 +31,15 @@ gamepad_select=4
 gamepad_start=6
 gamepad_opt=1
 gamepad_edit=0
-gamepad_analog_threshold=32767 ;the threshold for analog sticks to trigger cursor movement (range: 1-32767)
+
+gamepad_analog_threshold=32766 ;the threshold for analog sticks to trigger cursor movement (range: 1-32767)
+gamepad_analog_invert=false ;invert up/down and left/right axis (true/false)
+
+; these need to be the decimal value of the controller axis
+; you can use -1 if you do not wish to map the function to an analog axis
+gamepad_analog_axis_updown=1
+gamepad_analog_axis_leftright=0
+gamepad_analog_axis_start=5
+gamepad_analog_axis_select=4
+gamepad_analog_axis_opt=-1
+gamepad_analog_axis_edit=-1
