--- a/config.ini
+++ b/config.ini
@@ -32,8 +32,8 @@ gamepad_start=6
 gamepad_opt=1
 gamepad_edit=0
 
-gamepad_analog_threshold=32766 ;the threshold for analog sticks to trigger cursor movement (range: 1-32767)
-gamepad_analog_invert=false ;invert up/down and left/right axis (true/false)
+gamepad_analog_threshold=32766 ;the threshold for analog sticks to trigger cursor movement (working values: 1-32766)
+gamepad_analog_invert=false ;NOT IMPLEMENTED YET: invert up/down and left/right axis (true/false)
 
 ; these need to be the decimal value of the controller axis
 ; you can use -1 if you do not wish to map the function to an analog axis
