--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
           cp /mingw32/bin/SDL2.dll .
           cp /mingw32/bin/libgcc_s_dw2-1.dll .
           cp /mingw32/bin/libserialport-0.dll .
+          cp /mingw32/bin/libwinpthread-1.dll .
         else
           cp /mingw64/bin/SDL2.dll .
           cp /mingw64/bin/libserialport-0.dll .
@@ -66,6 +67,7 @@ jobs:
           SDL2.dll
           libserialport-0.dll
           libgcc_s_dw2-1.dll
+          libwinpthread-1.dll
           gamecontrollerdb.txt
           LICENSE
           README.md
