--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           cp /mingw64/bin/SDL2.dll .
           cp /mingw64/bin/libserialport-0.dll .
         fi
-        unix2dos README.md config.ini LICENSE AUDIOGUIDE.md
+        unix2dos README.md config.ini.sample LICENSE AUDIOGUIDE.md
     - name: 'Upload artifact (win32)'
       if: matrix.win == 'win32'
       uses: actions/upload-artifact@v2
@@ -72,7 +72,7 @@ jobs:
           LICENSE
           README.md
           AUDIOGUIDE.md
-          config.ini
+          config.ini.sample
     - name: 'Upload artifact (win64)'
       if: matrix.win == 'win64'
       uses: actions/upload-artifact@v2
@@ -86,7 +86,7 @@ jobs:
           LICENSE
           README.md
           AUDIOGUIDE.md
-          config.ini
+          config.ini.sample
 
   build-linux:
     runs-on: ubuntu-latest
@@ -115,4 +115,4 @@ jobs:
             README.md
             m8c
             gamecontrollerdb.txt
-            config.ini
+            config.ini.sample
