--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,7 @@ jobs:
       - name: 'Build package'
         run: |
           make
+          chmod 755 m8c
           cd macos/m8c.app/Contents/
           mkdir MacOS
           cd MacOS
@@ -145,14 +146,10 @@ jobs:
           install_name_tool -change /usr/local/opt/sdl2/lib/libSDL2-2.0.0.dylib @executable_path/libSDL2-2.0.0.dylib m8c
           cd ../../../../
           cp -r macos/m8c.app .
+          zip -r m8c.zip m8c.app LICENSE README.md AUDIOGUIDE.md config.ini.sample gamecontrollerdb.txt
       - name: 'Upload artifact'
         uses: actions/upload-artifact@v2
         with:
           name: m8c-${{ steps.date.outputs.date }}-macos
-          path: |
-            m8c.app
-            LICENSE
-            README.md
-            AUDIOGUIDE.md
-            config.ini.sample
-            gamecontrollerdb.txt
+          path: m8c.zip
+            
