--- a/config.ini.sample
+++ b/config.ini.sample
@@ -8,6 +8,10 @@
 fullscreen=false
 ; set this to false to run m8c in software rendering mode (may be useful for Raspberry Pi)
 use_gpu=true
+; the delay amount in ms in the main loop, decrease value for faster operation, increase value if too much cpu usage
+idle_ms = 10
+; show a spinning cube if device is not inserted
+wait_for_device = true
 
 [keyboard]
 ; these need to be the decimal value of the SDL scancodes.
