--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
 
-if (APPLE)
-    link_directories(/opt/homebrew/lib)
-endif ()
-
 project(m8c C)
 
 find_package(PkgConfig REQUIRED)
@@ -11,8 +7,11 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDL2 REQUIRED sdl2)
 if (USE_LIBUSB)
     pkg_check_modules(LIBUSB REQUIRED libusb)
+    link_directories(${SDL2_LIBRARY_DIRS} ${LIBUSB_LIBRARY_DIRS})
+    add_compile_definitions(USE_LIBUSB)
 else ()
     pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
+    link_directories(${SDL2_LIBRARY_DIRS} ${LIBSERIALPORT_LIBRARY_DIRS})
 endif (USE_LIBUSB)
 
 string(CONCAT FILE_CONTENT "#include <SDL.h>")
@@ -52,3 +51,4 @@ else ()
     target_include_directories(m8c PUBLIC ${LIBSERIALPORT_INCLUDE_DIRS})
     target_compile_options(m8c PUBLIC ${LIBSERIALPORT_CFLAGS_OTHER})
 endif ()
+
