update deprecated syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       shell: bash
 
     - name: 'Checkout'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
@@ -59,7 +59,7 @@ jobs:
         unix2dos README.md config.ini.sample LICENSE AUDIOGUIDE.md
     - name: 'Upload artifact (win32)'
       if: matrix.win == 'win32'
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: m8c-${{ steps.date.outputs.date }}-${{ matrix.win }}
         path: |
@@ -75,7 +75,7 @@ jobs:
           config.ini.sample
     - name: 'Upload artifact (win64)'
       if: matrix.win == 'win64'
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: m8c-${{ steps.date.outputs.date }}-${{ matrix.win }}
         path: |
@@ -97,7 +97,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install --fix-missing build-essential libsdl2-dev libserialport-dev zip
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: 'Get current date'
         id: date
@@ -107,7 +107,7 @@ jobs:
         run: |
           make
       - name: 'Upload artifact'
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: m8c-${{ steps.date.outputs.date }}-linux
           path: |
@@ -126,11 +126,10 @@ jobs:
         run: brew install cmake sdl2 libserialport pkg-config
 
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: 'Get current date'
-        id: date
-        run: echo "::set-output name=date::$(date +%Y%m%d)"
+      - name: Set current date as env variable
+        run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV        
 
       - name: 'Build package'
         run: |
@@ -144,8 +143,10 @@ jobs:
           cp -r /tmp/m8c.app .
           zip -r m8c.zip m8c.app LICENSE README.md AUDIOGUIDE.md config.ini.sample gamecontrollerdb.txt
       - name: 'Upload artifact'
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: m8c-${{ steps.date.outputs.date }}-macos
+          name: m8c-${{ env.NOW }}-macos
           path: m8c.zip
+          env:
+            Date:
             
