--- a/.github/workflows/nix-package.yml
+++ b/.github/workflows/nix-package.yml
@@ -12,9 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.push.head.ref }}
 
       - name: Set up Nix
         uses: cachix/install-nix-action@v22
