use 100 char wide columns in files, fix #146 keyjazz overlay on model 02

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,10 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[*.h]
+indent_style = space
+indent_size = 2
+
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
