--- a/.github/workflows/build-macos-arm.yml
+++ b/.github/workflows/build-macos-arm.yml
@@ -11,8 +11,12 @@ jobs:
     runs-on: macos-latest
     
     steps:
+      - name: 'Environment info'
+        run: |
+          uname -m
+    
       - name: 'Install dependencies'
-        run: arch -arm64 brew install cmake pkg-config sdl2 libserialport 
+        run: brew install cmake pkg-config sdl2 libserialport 
           
       - name: 'Checkout'
         uses: actions/checkout@v4
@@ -22,14 +26,14 @@ jobs:
         
       - name: 'Build m8c'
         run: |
-          mkdir -p build_arm64 && cd build_arm64 && export CMAKE_APPLE_SILICON_PROCESSOR="arm64" && cmake .. && cpack -V
+          mkdir -p build_arm64 && cd build_arm64 && cmake .. && cpack -V
 
       - name: 'Build package'
         run: |
-          mv build_arm64/m8c-0.1.1-Darwin.dmg m8c-${{ env.NOW }}-applesilicon.dmg
+          mv build_arm64/m8c-0.1.1-Darwin.dmg m8c-${{ env.NOW }}-macos-applesilicon.dmg
       - name: 'Upload artifact'
         uses: actions/upload-artifact@v4
         with:
-          name: m8c-${{ env.NOW }}-macos
+          name: m8c-${{ env.NOW }}-macos-applesilicon
           path: |
-            m8c-${{ env.NOW }}-applesilicon.dmg
+            m8c-${{ env.NOW }}-macos-applesilicon.dmg
