Enable Code Signing for Apple Silicon version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ if (APPLE)
     set(APPS "\${CMAKE_INSTALL_PREFIX}/${APP_NAME}.app")
 
     install(CODE "include(BundleUtilities)
-    fixup_bundle(\"${APPS}\" \"\" \"\")")
+    fixup_bundle(\"${APPS}\" \"\" \"\")
+    execute_process(COMMAND codesign --force --deep --sign - \${CMAKE_INSTALL_PREFIX}/${APP_NAME}.app)")
     set(CPACK_GENERATOR "DragNDrop")
     include(CPack)
 endif ()
