Add emulator audio output

--- a/emu/CMakeLists.txt
+++ b/emu/CMakeLists.txt
@@ -3,4 +3,5 @@ target_compile_options(capstone PRIVATE "-Wno-error" "-w")
 
 file(GLOB SRC "*.cpp")
 add_library(emu ${SRC})
-target_link_libraries(emu m8emu)
+target_link_libraries(emu PUBLIC m8emu)
+target_include_directories(emu PRIVATE ${SDL2_INCLUDE_DIRS})
