--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -36,10 +36,9 @@ jobs:
       with:
         msystem: ${{ matrix.sys }}
         update: true
-        install: mingw-w64-${{ matrix.env }}-toolchain make mingw-w64-${{ matrix.env }}-SDL2 mingw-w64-${{ matrix.env }}-libserialport zip dos2unix autoconf automake-wrapper libtool make
+        install: mingw-w64-${{ matrix.env }}-toolchain make mingw-w64-${{ matrix.env }}-SDL2 zip dos2unix autoconf automake-wrapper libtool make
 
-    - name: 'Build libserialport manually for win32'
-      if: matrix.win == 'win32'
+    - name: 'Build libserialport manually'
       run: |
         wget https://github.com/sigrokproject/libserialport/archive/refs/heads/master.zip
         pushd libserialport-master
