unzip libserialport before trying to access it

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,6 +41,7 @@ jobs:
     - name: 'Build libserialport manually'
       run: |
         wget https://github.com/sigrokproject/libserialport/archive/refs/heads/master.zip
+        unzip master.zip
         pushd libserialport-master
         ./autogen.sh
         ./configure
