--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,6 +20,7 @@ jobs:
         shell: msys2 {0}
     env:
       MINGW_ARCH: ${{ matrix.sys }}
+      SDL_VERSION: 3.2.4
     steps:
 
     - name: 'git config'
@@ -37,6 +38,34 @@ jobs:
         msystem: ${{ matrix.sys }}
         update: true
         install: mingw-w64-${{ matrix.env }}-toolchain make mingw-w64-${{ matrix.env }}-sdl3 zip dos2unix autoconf automake-wrapper libtool make unzip
+
+    - name: 'Cache SDL3 files'
+      id: cache-sdl3-files
+      uses: actions/cache@v4
+      with:
+        path: 'SDL3-3.2.4'
+        key: win-sdl3-files
+
+    - name: 'Download SDL3 sources'
+      if: steps.cache-sdl3-files.outputs.cache-hit != 'true'
+      run: |
+        (curl https://www.libsdl.org/release/SDL3-$SDL_VERSION.tar.gz || curl -L https://github.com/libsdl-org/SDL/releases/download/release-$SDL_VERSION/SDL3-$SDL_VERSION.tar.gz) | tar xvf -
+
+    - name: 'Build SDL3'
+      if: steps.cache-sdl3-files.outputs.cache-hit != 'true'
+      run: |
+        pushd SDL3-$SDL_VERSION
+        mkdir build_${{ matrix.env }}
+        cd build_${{ matrix.env }}
+        ../configure
+        make
+        popd
+
+    - name: 'Install SDL3'
+      run: |
+        pushd SDL3-$SDL_VERSION/build_x86_64
+        make install 
+        popd        
 
     - name: 'Build libserialport manually'
       run: |
