--- a/.github/workflows/build-macos-arm.yml
+++ b/.github/workflows/build-macos-arm.yml
@@ -16,7 +16,7 @@ jobs:
           uname -m
     
       - name: 'Install dependencies'
-        run: brew install cmake pkg-config sdl3 libserialport
+        run: brew update && brew install cmake pkg-config sdl3 libserialport
           
       - name: 'Checkout'
         uses: actions/checkout@v4
